--- a/views/document.ejs
+++ b/views/document.ejs
@@ -52,22 +52,43 @@
         <h3 class="text-muted">Project name</h3>
       </div>
 
-      <div class="jumbotron">
-        <h1>Jumbotron heading</h1>
-        
-        <textarea id="summernote" class="form-control">Hello Summernote</textarea>
+      <div class="row">
+        <div class="jumbotron col-xs-12 col-sm-6 col-lg-8">
+          <h1>Meeting Document</h1>
 
-        <p><a class="btn btn-lg btn-success" href="#" role="button">Sign up today</a></p>
-        <div  class="alert alert-warning">
-            
+          <textarea id="summernote" class="form-control">Hello Summernote</textarea>
+
+          <p><a class="btn btn-lg btn-success" href="#" role="button">Sign up today</a></p>
+          <div  class="alert alert-warning">
+
             <div  id="message">
             </div>
-        </div>
-        <div  class="alert alert-warning">
-            
+          </div>
+          <h3>Document ID</h3>
+          <div  class="alert alert-warning">
             <div  id="documentid"><%= documentid %></div>
+          </div>
+        </div>
+
+        <div class="col-xs-6 col-lg-4">
+          <h3>Owner</h3>
+          <div  class="alert alert-success">
+            <div  id="owner"><%= owner %></div>
+          </div>
+          <h3>Your User Name</h3>
+          <div  class="alert alert-info">
+            <div  id="username"><%= username %></div>
+          </div>
+          <h3>Current Users</h3>
+          <div id="userlist" class="alert alert-info">
+            
+          </div>
         </div>
       </div>
+
+
+
+
 
 
 
@@ -79,7 +100,7 @@
 
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="/js/ie10-viewport-bug-workaround.js"></script>
     
     
     <script>
@@ -94,7 +115,7 @@
       focus: true,                 // set focus to editable area after initializing summernote
     });
 
-    $('#summernote').code(<%= content %>);
+    $('#summernote').code("<%= content %>");
 
 
     </script>
@@ -102,31 +123,57 @@
     <script>
     var socket = io('/meetingdocument');
 
-    var canupdate = true;
+    var canupdate = <%= isowner %>;
 
     var documentid = $('#documentid').text();
+
+    var username = $('#username').text();
 
     var documentcontent = $('#summernote').code();
 
     //user join to the meeting
 
-    socket.on('join document',function (data){
+    socket.on('join document',function (doc){
 
       $('#message').text("joined");
 
-      //$('#summernote').code(data.content);
+      //update document content
+
+      $('#summernote').code(doc.content);
+
+      //populate user list 
+
+      populateUserList(doc.users)
+
+    });
+
+    //update userlist
+
+    socket.on('userlist update',function (doc){
+
+      $('#message').text("New User Joined");
+
+      //populate user list 
+
+      populateUserList(doc.users)
+
+    });
+
+    //socket error message
+
+    socket.on('error',function (data){
+
+      $('#message').text(data.error);
 
     });
 
     //update document content
 
-    socket.on('document update',function (data){
-
-      canupdate = false;
+    socket.on('document update',function (doc){
 
       $('#summernote').children().prop('disabled',true);
 
-      $('#summernote').code(data);
+      $('#summernote').code(doc.content);
 
     });
 
@@ -134,22 +181,39 @@
 
     socket.on('update success',function (data){
 
-      if (canupdate) {
-
-        $('#message').text("updated!");
-        console.log('test test dddd');
-
-      }
+      $('#message').text("updated!");
 
     });
 
-    
+    $(window).on('beforeunload' , function(){
+
+      socket.emit('leave document',{ documentid : documentid , username : username });
+
+    });
 
     $(document).ready(function(){
 
-      socket.emit('join document',{documentid:documentid});
+      socket.emit('join document',{ documentid : documentid , username : username });
 
      });
+
+    //populate user list
+
+    function populateUserList(users) {
+
+      var userList = '';
+
+      $.each( users , function (index,item) {
+
+        userList += '<div>' + item + '</div>';
+
+      });
+
+      $('#userlist').html(userList);
+
+    }
+
+    //update document every 5 seconds
 
     function updatedocument() {
 
