--- a/views/document.ejs
+++ b/views/document.ejs
@@ -122,9 +122,9 @@
 
     var canupdate = <%= isowner %>;
 
-    var documentid = <%= documentid %>;
+    var documentid = '<%= documentid %>';
 
-    var username = <%= username %>;
+    var username = '<%= username %>';
 
     var documentcontent = $('#summernote').code();
 
