--- a/views/register.ejs
+++ b/views/register.ejs
@@ -29,10 +29,10 @@
   <body>
 
     <div class="container">
-      <div><%= error %></div>
+      <div class="text-center"><% if(error) {%> <%= error %> <% } %></div>
 
       <form class="form-signin" action="/register" method="post">
-        <h2 class="form-signin-heading">注册</h2>
+        <h2 class="form-signin-heading">注册页</h2>
         <input type="text" class="form-control" name="username" placeholder="用户名" required autofocus>
         <input type="password" class="form-control" name="password" placeholder="密码" required autofocus>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Create</button>
